Разметка + стилизация 3х блоков

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,3 +1,6 @@
-@import url("global.scss");
-@import url("decorative.scss");
-@import url("fonts.scss");
+@import "global.scss";
+@import "decorative.scss";
+@import "fonts.scss";
+@import "header.scss";
+@import "travel.scss";
+@import "advantage.scss";
