--- a/source/sass/decorative.scss
+++ b/source/sass/decorative.scss
@@ -2,3 +2,30 @@
   max-width: 1366px;
   margin: 0 auto;
 }
+
+.wrapper {
+  max-width: 1366px;
+  margin: 0 auto;
+  padding: 0 103px;
+
+  @media (max-width: 1365px) {
+    max-width: 768px;
+    padding: 0 45px;
+  }
+
+  @media (max-width: 767px) {
+    max-width: 320px;
+    padding: 0 15px;
+  }
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  border: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
