--- a/source/sass/advantage.scss
+++ b/source/sass/advantage.scss
@@ -6,8 +6,7 @@
 
   &__wrapper {
     display: flex;
-    justify-content: center;
-    column-gap: 30px;
+    justify-content: space-between;
   }
 
   &__title {
