--- a/source/sass/travel.scss
+++ b/source/sass/travel.scss
@@ -1,5 +1,6 @@
 .travel {
   display: flex;
+  justify-content: space-between;
 
   &__title {
     font-style: normal;
@@ -7,6 +8,7 @@
     font-size: 28px;
     line-height: 150%;
     color: #011c40;
+    margin-bottom: 40px;
   }
 
   &__badge {
@@ -24,7 +26,6 @@
   &__img{
     margin-top: 120px;
     margin-bottom: 120px;
-    margin-left: 88px;
   }
 
 }
