--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -112,7 +112,7 @@
   }
 
   .main-nav--nojs .main-nav__toggle {
-    display: none;
+    display: block;
   }
 
   .main-nav--nojs .main-nav__wrapper {
