--- a/source/sass/blocks/container.scss
+++ b/source/sass/blocks/container.scss
@@ -1,6 +1,12 @@
-@media  screen and (min-width: 1367px) {
-  .container {
-    max-width: 1366px;
-    margin: 0 auto;
+.container {
+  max-width: 1366px;
+  margin: 0 auto;
+
+  @media (max-width:1365px){
+    max-width: 768px;
+  }
+
+  @media (max-width:767px){
+    max-width: 320px;
   }
 }
