--- a/source/sass/blocks/description.scss
+++ b/source/sass/blocks/description.scss
@@ -1,11 +1,11 @@
 .description {
   background-color: #f9fbfd;
-
+  
   &__br {
-    display: block;
+    display: none;
 
-    @media (max-width: 1365px) {
-      display: none;
+    @media (min-width: 1366px) {
+      display: block;
     }
 
     &-tab {
@@ -35,7 +35,7 @@
   padding-left: 103px;
 }
 
-@media screen and (max-width: 1366px) {
+@media screen and (max-width: 1365px) {
   .description__wrapper {
     padding-left: 45px;
     padding-right: 45px;
@@ -62,7 +62,7 @@
   color: #011c40;
 }
 
-@media screen and (max-width: 1366px) {
+@media screen and (max-width: 1365px) {
   .description__wrapper-text h2 {
     padding-bottom: 16px;
 
@@ -89,7 +89,7 @@
   color: #011c40;
 }
 
-@media screen and (max-width: 1366px) {
+@media screen and (max-width: 1365px) {
   .description__wrapper-text p {
     font-size: 16px;
     line-height: 24px;
@@ -122,7 +122,7 @@
   }
 }
 
-@media screen and (max-width: 1366px) {
+@media screen and (max-width: 1365px) {
   .description__wrapper-text {
     padding-right: 16px;
     padding-top: 90px;
@@ -137,7 +137,7 @@
   }
 }
 
-@media screen and (max-width: 1366px) {
+@media screen and (max-width: 1365px) {
   .description__wrapper-text h2 {
     padding-right: 103px;
   }
@@ -157,7 +157,7 @@
   }
 }
 
-@media screen and (max-width: 1366px) {
+@media screen and (max-width: 1365px) {
   .description__wrapper-img img {
     width: 324px;
     height: 264px;
@@ -179,7 +179,7 @@
   line-height: 0;
 }
 
-@media screen and (max-width: 1366px) {
+@media screen and (max-width: 1365px) {
   .description__wrapper-img {
     padding-top: 100px;
     padding-bottom: 0;
