--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -5,7 +5,7 @@
   padding-right: 0;
   padding-left: 103px;
 
-  background-color: #E3ECF6;
+  background-color: #e3ecf6;
   background-image: url("../img/landscape-2-desktop@1x.jpg");
   background-repeat: no-repeat;
   background-position: 50% 50%;
@@ -14,10 +14,35 @@
   @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
     background-image: url("../img/landscape-2-desktop@2x.jpg");
   }
+
+  &__br {
+    display: none;
+
+    @media (min-width: 1366px) {
+      display: block;
+    }
+
+    &-tab {
+      display: none;
+
+      @media (min-width: 768px) {
+        display: block;
+      }
+
+      @media (min-width: 1366px) {
+        display: none;
+      }
+    }
+
+    &-mob {
+      @media (min-width: 768px) {
+        display: none;
+      }
+    }
+  }
 }
 
-
-@media screen and (max-width: 1366px) {
+@media screen and (max-width: 1365px) {
   .features {
     background-image: url("../img/landscape-2-tablet@1x.jpg");
 
@@ -37,27 +62,25 @@
   }
 }
 
-@media  screen and (min-width: 1410px) {
-  .features  {
+@media screen and (min-width: 1410px) {
+  .features {
     padding-right: 103px;
   }
 }
 
-@media  screen and (max-width: 1370px) {
-  .features  {
+@media screen and (max-width: 1370px) {
+  .features {
     padding-right: 0;
   }
 }
 
-
-@media  screen and (max-width: 1365.9px) {
-  .features  {
+@media screen and (max-width: 1365.9px) {
+  .features {
     padding-right: 103px;
   }
 }
 
-
-@media  screen and (max-width: 1366px) {
+@media screen and (max-width: 1365px) {
   .features {
     padding-top: 91px;
     padding-bottom: 70px;
@@ -66,19 +89,19 @@
   }
 }
 
-@media  screen and (max-width: 1366px) {
+@media screen and (max-width: 1365px) {
   .features {
     padding-right: 45px;
   }
 }
 
-@media  screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .features {
     padding-right: 15px;
   }
 }
 
-@media  screen and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .features {
     padding-top: 58px;
     padding-bottom: 36px;
@@ -96,69 +119,67 @@
   padding-left: 466px;
 }
 
-@media  screen and (min-width: 1410px) {
-  .features__heading  {
+@media screen and (min-width: 1410px) {
+  .features__heading {
     padding-left: 0;
     text-align: center;
   }
 }
 
-@media  screen and (max-width: 1370px) {
-  .features__heading  {
+@media screen and (max-width: 1370px) {
+  .features__heading {
     padding-left: 466px;
   }
 }
 
-@media  screen and (max-width: 1365.9px) {
-  .features__heading  {
+@media screen and (max-width: 1365.9px) {
+  .features__heading {
     padding-left: 0;
     text-align: center;
   }
 }
 
-
-@media  screen and (max-width: 1366px) {
+@media screen and (max-width: 1365px) {
   .features__heading {
     padding-left: 233px;
   }
 }
 
-@media  screen and (max-width: 1366px) {
+@media screen and (max-width: 1365px) {
   .features__heading {
     padding-left: 0;
     text-align: center;
   }
 }
 
-@media  screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .features__heading {
     padding-left: 233px;
     text-align: left;
   }
 }
 
-@media  screen and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .features__heading {
     justify-content: flex-start;
     padding-left: 32px;
   }
 }
 
-@media  screen and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .features__heading {
     padding-left: 0;
     text-align: center;
   }
 }
 
-@media  screen and (max-width: 373px) {
+@media screen and (max-width: 373px) {
   .features__heading {
     align-items: flex-start;
     padding-left: 32px;
     text-align: left;
   }
 }
-
 
 .features__heading h2 {
   margin: 0;
@@ -167,17 +188,17 @@
   font-weight: 600;
   font-size: 28px;
   line-height: 42px;
-  color: #011C40;
+  color: #011c40;
 }
 
-@media  screen and (max-width: 1366px) {
+@media screen and (max-width: 1365px) {
   .features__heading h2 {
     font-size: 26px;
     line-height: 39px;
   }
 }
 
-@media  screen and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .features__heading h2 {
     padding-left: 14px;
     padding-bottom: 29px;
@@ -196,49 +217,49 @@
   list-style: none;
 }
 
-@media  screen and (min-width: 1410px) {
-  .features__list  {
-    justify-content: space-between;
-  }
-}
-
-@media  screen and (max-width: 1370px) {
-  .features__list  {
-    justify-content: flex-start;
-  }
-}
-
-@media  screen and (max-width: 1365.9px) {
-  .features__list  {
-    justify-content: space-between;
-  }
-}
-
-@media  screen and (max-width: 1366px) {
+@media screen and (min-width: 1410px) {
   .features__list {
     justify-content: space-between;
   }
 }
 
-@media  screen and (max-width: 768px) {
+@media screen and (max-width: 1370px) {
   .features__list {
     justify-content: flex-start;
   }
 }
 
-@media  screen and (max-width: 767px) {
+@media screen and (max-width: 1365.9px) {
+  .features__list {
+    justify-content: space-between;
+  }
+}
+
+@media screen and (max-width: 1365px) {
+  .features__list {
+    justify-content: space-between;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .features__list {
+    justify-content: flex-start;
+  }
+}
+
+@media screen and (max-width: 767px) {
   .features__list {
     flex-direction: column;
   }
 }
 
-@media  screen and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .features__list {
     align-items: center;
   }
 }
 
-@media  screen and (max-width: 373px) {
+@media screen and (max-width: 373px) {
   .features__list {
     align-items: flex-start;
   }
@@ -252,30 +273,30 @@
   padding-left: 30px;
   padding-bottom: 23px;
 
-  background-color: #F9FBFD;
+  background-color: #f9fbfd;
 }
 
-@media  screen and (min-width: 1410px) {
-  .list-features__item  {
+@media screen and (min-width: 1410px) {
+  .list-features__item {
     margin-right: 0;
   }
 }
 
-@media  screen and (max-width: 1370px) {
-  .list-features__item  {
+@media screen and (max-width: 1370px) {
+  .list-features__item {
     margin-right: 40px;
   }
 }
 
-@media  screen and (max-width: 1365.9px) {
-  .list-features__item  {
+@media screen and (max-width: 1365.9px) {
+  .list-features__item {
     max-width: 300px;
     margin-right: 0;
   }
 }
 
-@media  screen and (max-width: 1156px) {
-  .list-features__item  {
+@media screen and (max-width: 1156px) {
+  .list-features__item {
     max-width: 206px;
     margin-right: 30px;
     margin-bottom: 30px;
@@ -285,21 +306,21 @@
   }
 }
 
-@media  screen and (max-width: 1366px) {
-  .list-features__item  {
+@media screen and (max-width: 1365px) {
+  .list-features__item {
     margin-right: 0;
     margin-bottom: 0;
   }
 }
 
-@media  screen and (max-width: 768px) {
-  .list-features__item  {
+@media screen and (max-width: 767px) {
+  .list-features__item {
     margin-right: 30px;
     margin-bottom: 30px;
   }
 }
 
-@media  screen and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .list-features__item {
     min-width: 290px;
     margin-bottom: 30px;
@@ -308,13 +329,13 @@
   }
 }
 
-@media  screen and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .list-features__item--ship {
     margin-right: 0;
   }
 }
 
-@media  screen and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .list-features__item--ticks {
     margin-left: 0;
     margin-right: 0;
@@ -329,7 +350,7 @@
   padding-bottom: 13px;
 }
 
-@media  screen and (max-width: 1366px) {
+@media screen and (max-width: 1365px) {
   .list-features__item--ship .list-features__icon {
     padding-top: 25px;
     padding-bottom: 15px;
@@ -341,14 +362,13 @@
   padding-bottom: 19px;
 }
 
-@media  screen and (max-width: 1366px) {
+@media screen and (max-width: 1365px) {
   .list-features__item--ticks .list-features__icon {
     padding-top: 29px;
   }
 }
 
-
-@media  screen and (max-width: 1366px) {
+@media screen and (max-width: 1365px) {
   .list-features__item--ticks .list-features__icon {
     padding-top: 27px;
   }
@@ -359,14 +379,14 @@
   padding-bottom: 23px;
 }
 
-@media  screen and (max-width: 1366px) {
+@media screen and (max-width: 1365px) {
   .list-features__item--boat .list-features__icon {
     padding-top: 28px;
     padding-bottom: 20px;
   }
 }
 
-@media  screen and (max-width: 1366px) {
+@media screen and (max-width: 1365px) {
   .list-features__item--ship svg {
     height: 26px;
   }
@@ -387,24 +407,23 @@
   font-weight: 500;
   font-size: 18px;
   line-height: 27px;
-  color: #011C40;
+  color: #011c40;
 }
 
-@media  screen and (max-width: 1241px) {
+@media screen and (max-width: 1241px) {
   .list-features__item h3 {
     padding-right: 36px;
   }
 }
 
-
-@media  screen and (max-width: 1366px) {
+@media screen and (max-width: 1365px) {
   .list-features__item h3 {
     line-height: 25px;
     padding-bottom: 10px;
   }
 }
 
-@media  screen and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .list-features__item h3 {
     padding-bottom: 9px;
   }
@@ -416,5 +435,5 @@
   font-weight: normal;
   font-size: 14px;
   line-height: 20px;
-  color: #011C40;
+  color: #011c40;
 }
