--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -1,5 +1,11 @@
 .contacts {
   background-color: #f9fbfd;
+
+  &__br {
+    @media (min-width:1366px){
+      display: none;
+    }
+  }
 }
 
 .contacts__wrapper {
@@ -11,7 +17,7 @@
   padding-right: 103px;
 }
 
-@media  screen and (max-width: 1365px) {
+@media screen and (max-width: 1365px) {
   .contacts__wrapper {
     padding-top: 100px;
     padding-bottom: 93px;
@@ -20,7 +26,7 @@
   }
 }
 
-@media  screen and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .contacts__wrapper {
     flex-direction: column;
 
@@ -36,7 +42,7 @@
   padding-top: 77px;
 }
 
-@media  screen and (max-width: 1365px) {
+@media screen and (max-width: 1365px) {
   .contacts__wrapper-text {
     min-width: 354px;
     padding-top: 69px;
@@ -44,7 +50,7 @@
   }
 }
 
-@media  screen and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .contacts__wrapper-text {
     min-width: 290px;
     padding-top: 0;
@@ -60,19 +66,19 @@
   overflow: hidden;
 }
 
-@media  screen and (max-width: 1289px) {
+@media screen and (max-width: 1289px) {
   .contacts__map {
     margin-right: 30px;
   }
 }
 
-@media  screen and (max-width: 1365px) {
+@media screen and (max-width: 1365px) {
   .contacts__map {
     margin-right: 0;
   }
 }
 
-@media  screen and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .contacts__map {
     padding-right: 0;
   }
@@ -87,13 +93,13 @@
   border: none;
 }
 
-@media  screen and (max-width: 1365px) {
+@media screen and (max-width: 1365px) {
   .contacts__map iframe {
     height: 335px;
   }
 }
 
-@media  screen and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .contacts__map iframe {
     width: 100%;
     height: 316px;
@@ -125,19 +131,18 @@
   background-size: 18px 22px;
 }
 
-@media  screen and (max-width: 1365px) {
+@media screen and (max-width: 1365px) {
   .contacts__map::before {
     top: 217px;
     left: 109px;
   }
 }
 
-@media  screen and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .contacts__map {
     order: 1;
   }
 }
-
 
 .contacts__map img {
   line-height: 0;
@@ -147,19 +152,18 @@
   padding-bottom: 32px;
 }
 
-@media  screen and (max-width: 1365px) {
+@media screen and (max-width: 1365px) {
   .contacts__slogan {
     padding-bottom: 26px;
   }
 }
-
 
 .contacts__slogan span {
   font-style: normal;
   font-weight: 500;
   font-size: 18px;
   line-height: 27px;
-  color: #011C40;
+  color: #011c40;
 }
 
 .contacts__address {
@@ -173,7 +177,7 @@
   font-weight: normal;
   font-size: 16px;
   line-height: 24px;
-  color: #011C40;
+  color: #011c40;
 }
 
 .contacts__address span::before {
@@ -192,7 +196,7 @@
   background-size: 18px 22px;
 }
 
-@media  screen and (max-width: 1365px) {
+@media screen and (max-width: 1365px) {
   .contacts__address span::before {
     top: 2px;
   }
@@ -210,7 +214,7 @@
   font-weight: normal;
   font-size: 16px;
   line-height: 24px;
-  color: #011C40;
+  color: #011c40;
 
   text-decoration: none;
 }
@@ -231,7 +235,7 @@
   border-bottom: 1px solid rgba(1, 28, 64, 0.5);
 }
 
-@media  screen and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .contacts__phone {
     padding-bottom: 36px;
   }
@@ -252,4 +256,3 @@
   background-position: 0 0;
   background-size: 18px 18px;
 }
-
