--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -36,6 +36,13 @@
   }
 }
 
+.form__button button {
+  margin: 0;
+  padding-top: 10px;
+  padding-right: 10px;
+  display: block;
+}
+
 .form__field input {
   width: 303px;
   margin: 0;
