--- a/source/sass/blocks/card.scss
+++ b/source/sass/blocks/card.scss
@@ -1,11 +1,11 @@
-@media  screen and (max-width: 1365px) {
+@media screen and (max-width: 1365px) {
   .card {
     width: 309px;
     height: 386px;
   }
 }
 
-@media  screen and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .card {
     width: 270px;
   }
@@ -19,21 +19,20 @@
   height: 386px;
 }
 
-
 .card__img img {
   min-width: 260px;
   min-height: 386px;
   line-height: 0;
 }
 
-@media  screen and (max-width: 1365px) {
+@media screen and (max-width: 1365px) {
   .card__img img {
     width: 309px;
     height: 386px;
   }
 }
 
-@media  screen and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .card__img img {
     width: 270px;
   }
@@ -49,7 +48,7 @@
   font-weight: 500;
   font-size: 18px;
   line-height: 27px;
-  color: #F9FBFD;
+  color: #f9fbfd;
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
@@ -57,14 +56,14 @@
   opacity: 1;
 }
 
-@media  screen and (max-width: 1365px) {
+@media screen and (max-width: 1365px) {
   .card__main-heading h3 {
     margin-top: -55px;
     padding-left: 34px;
   }
 }
 
-@media  screen and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .card__main-heading h3 {
     margin-top: -44px;
     padding-left: 26px;
@@ -82,7 +81,7 @@
   font-size: 18px;
   line-height: 27px;
 
-  color: #F9FBFD;
+  color: #f9fbfd;
 }
 
 .card__heading h4 {
@@ -100,29 +99,28 @@
   font-weight: normal;
   font-size: 14px;
   line-height: 20px;
-  color: #D8D8D9;
+  color: #d8d8d9;
 }
 
-@media  screen and (max-width: 1365px) {
+@media screen and (max-width: 1365px) {
   .card__description p {
     min-width: 237px;
   }
 }
-
 
 .card__side {
   max-width: 260px;
   min-height: 386px;
 }
 
-@media  screen and (max-width: 1365px) {
+@media screen and (max-width: 1365px) {
   .card__side {
     min-width: 309px;
     min-height: 386px;
   }
 }
 
-@media  screen and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .card__side {
     min-width: 270px;
   }
@@ -131,7 +129,6 @@
 .card__side--front {
   background-color: #00437c;
 }
-
 
 .card__side.card__side--back {
   display: flex;
@@ -148,12 +145,14 @@
 
   visibility: hidden;
 
-  color: #F9FBFD;
-  background-color: #011C40;
-  box-shadow: 0px 4px 35px rgba(1, 28, 64, 0.15);
+  color: #f9fbfd;
+  background-color: #011c40;
+  box-shadow: 0 4px 35px rgba(1, 28, 64, 0.15);
+  position: relative;
+  z-index: 50;
 }
 
-@media  screen and (max-width: 1365px) {
+@media screen and (max-width: 1365px) {
   .card__side--back {
     padding-top: 70px;
   }
@@ -168,12 +167,6 @@
   align-self: flex-end;
 }
 
-.card__side--back {
-  position: relative;
-  z-index: 50;
-  visibility: hidden;
-}
-
 .card:hover .card__side--back {
   visibility: visible;
 }
@@ -182,7 +175,7 @@
   min-width: 208px;
 }
 
-@media  screen and (max-width: 1365px) {
+@media screen and (max-width: 1365px) {
   .card__text {
     max-width: 237px;
   }
