--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -4,9 +4,8 @@
   padding-bottom: 50px;
   padding-left: 50px;
   padding-right: 50px;
-
   background-color: #011c40;
-  box-shadow: 0px 4px 45px rgba(1, 28, 64, 0.15);
+  box-shadow: 0 4px 45px rgba(1, 28, 64, 0.15);
 }
 
 @media screen and (max-width: 767px) {
