--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -9,7 +9,6 @@
 }
 
 @media screen and (max-width: 767px) {
-
   .main-nav__toggle {
     position: absolute;
     top: 9.5px;
@@ -43,19 +42,18 @@
   .main-nav--closed .main-nav__toggle:hover::before {
     background-color: rgba(255, 255, 255, 0.8);
     box-shadow: 0 6px 0 0 rgba(255, 255, 255, 0.8),
-                0 12px 0 0 rgba(255, 255, 255, 0.8);
+      0 12px 0 0 rgba(255, 255, 255, 0.8);
   }
 
   .main-nav--closed .main-nav__toggle:active::before {
     background-color: rgba(255, 255, 255, 0.5);
     box-shadow: 0 6px 0 0 rgba(255, 255, 255, 0.5),
-                0 12px 0 0 rgba(255, 255, 255, 0.5);
+      0 12px 0 0 rgba(255, 255, 255, 0.5);
   }
 
   .main-nav--opened .main-nav__toggle {
     top: 9.5px;
     right: 7px;
-
 
     &::before,
     &::after {
@@ -68,7 +66,7 @@
       width: 20px;
       height: 2px;
 
-      background-color: black;
+      background-color: #060606;
     }
 
     &::before {
@@ -107,7 +105,7 @@
     min-height: 299px;
     padding-top: 73px;
     padding-left: 15px;
-    background-color: #E5E5E5;
+    background-color: #e5e5e5;
     z-index: 10;
   }
 
@@ -124,4 +122,3 @@
     display: block;
   }
 }
-
