--- a/source/sass/blocks/card.scss
+++ b/source/sass/blocks/card.scss
@@ -84,14 +84,6 @@
   color: #f9fbfd;
 }
 
-.card__heading h4 {
-  margin: 0;
-
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 20px;
-}
-
 .card__description p {
   margin: 0;
   padding-bottom: 12px;
@@ -101,6 +93,15 @@
   line-height: 20px;
   color: #d8d8d9;
 }
+
+.card__description h4 {
+  margin: 0;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 20px;
+}
+
+
 
 @media screen and (max-width: 1365px) {
   .card__description p {
@@ -184,10 +185,3 @@
 .card__description--cost p {
   padding-bottom: 0;
 }
-
-/* .card__side--back {
-  position: relative;
-  z-index: 50;
-  visibility: hidden;
-  visibility: visible;
-} */
