--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -1,10 +1,18 @@
 .catalog {
-  padding-top: 112px;
-  padding-left: 103px;
-  padding-right: 100px;
-  padding-bottom: 105px;
-
   background-color: #f9fbfd;
+  padding-bottom: 120px;
+}
+
+.catalog__title {
+  padding-top: 120px;
+
+  @media (max-width: 1365px) {
+    padding-top: 0px;
+  }
+
+  @media (max-width: 767px) {
+    padding-top: 0px;
+  }
 }
 
 @media screen and (max-width: 1365px) {
@@ -52,14 +60,8 @@
   }
 }
 
-@media screen and (max-width: 767px) {
-  .catalog__wrapper-heading {
-    padding-left: 6px;
-  }
-}
-
 .catalog h2 {
-  margin: 0;
+  margin: 0 auto;
 
   font-weight: 600;
   font-size: 28px;
@@ -78,7 +80,7 @@
 
 @media screen and (max-width: 767px) {
   .catalog h2 {
-    margin: 0;
+    margin: 0 auto;
   }
 }
 
@@ -92,7 +94,7 @@
 
 @media screen and (max-width: 767px) {
   .catalog h2 {
-    margin: 0;
+    margin: 0 auto;
   }
 }
 
