--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -224,6 +224,7 @@
 @media screen and (max-width: 767px) {
   .features__list {
     flex-direction: column;
+    align-items: center;
   }
 }
 
@@ -235,6 +236,6 @@
 
 @media screen and (max-width: 767px) {
   .features__list {
-    align-items: flex-start;
+    align-items: center;
   }
 }
