--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -113,7 +113,9 @@
   }
 
   @media (max-width: 767px) {
-    grid-template-columns: 1fr;
+    justify-content: center;
+    align-items: center;
+    grid-template-columns: 0.5fr;
     grid-template-rows: repeat(8, 1fr);
     grid-column-gap: 30px;
   }
@@ -128,6 +130,7 @@
 @media screen and (max-width: 1365px) {
   .catalog__list {
     justify-content: space-around;
+    padding: 0;
   }
 }
 
@@ -154,16 +157,13 @@
   .catalog__list {
     flex-direction: flex-start;
     align-items: flex-start;
+    padding: 0;
   }
 }
 
 .cards__item {
   display: flex;
   flex-direction: column;
-  margin-left: 15px;
-  margin-right: 15px;
-  margin-top: 15px;
-  margin-bottom: 15px;
 }
 
 @media screen and (max-width: 1365px) {
