--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -4,11 +4,12 @@
   padding-bottom: 50px;
   padding-left: 50px;
   padding-right: 50px;
-  background-color: #011c40;
-  box-shadow: 0 4px 45px rgba(1, 28, 64, 0.15);
+
+  background-color: #011C40;
+  box-shadow: 0px 4px 45px rgba(1, 28, 64, 0.15);
 }
 
-@media screen and (max-width: 767px) {
+@media  screen and (max-width: 767px) {
   .form {
     width: 100%;
     padding-top: 37px;
@@ -25,21 +26,14 @@
   font-weight: 500;
   font-size: 18px;
   line-height: 27px;
-  color: #f9fbfd;
+  color: #F9FBFD;
 }
 
-@media screen and (max-width: 767px) {
+@media  screen and (max-width: 767px) {
   .booking__form p {
     line-height: 25px;
     text-align: center;
   }
-}
-
-.form__button button {
-  margin: 0;
-  padding-top: 10px;
-  padding-right: 10px;
-  display: block;
 }
 
 .form__field input {
@@ -55,18 +49,19 @@
   font-weight: normal;
   font-size: 14px;
   line-height: 21px;
-  color: #011c40;
+  color: #011C40;
 
-  background-color: #f9fbfd;
+  background-color: #F9FBFD;;
 
   border: none;
 }
 
-@media screen and (max-width: 767px) {
+@media  screen and (max-width: 767px) {
   .form__field input {
     width: 100%;
   }
 }
+
 
 .form__field input:hover {
   opacity: 0.8;
@@ -75,6 +70,7 @@
 .form__field input:active {
   opacity: 0.5;
 }
+
 
 .form__field-check {
   position: relative;
@@ -92,7 +88,8 @@
   padding-left: 23px;
 }
 
-@media screen and (max-width: 767px) {
+
+@media  screen and (max-width: 767px) {
   .form__field-check label {
     padding-top: 0;
     padding-left: 30px;
@@ -103,7 +100,7 @@
   font-weight: normal;
   font-size: 10px;
   line-height: 13px;
-  color: #f9fbfd;
+  color: #F9FBFD;
 }
 
 .form__field label:hover {
@@ -111,7 +108,7 @@
   cursor: pointer;
 }
 
-@media screen and (max-width: 767px) {
+@media  screen and (max-width: 767px) {
   .form__field label {
     line-height: 12px;
   }
@@ -126,7 +123,7 @@
   width: 18px;
   height: 18px;
 
-  background-color: #f9fbfd;
+  background-color: #F9FBFD;
   cursor: pointer;
 }
 
@@ -139,11 +136,11 @@
   width: 18px;
   height: 18px;
 
-  background-color: rgba(249, 251, 253, 0.8);
+  background-color: rgba(249, 251, 253, 0.8);;
   cursor: pointer;
 }
 
-@media screen and (max-width: 767px) {
+@media  screen and (max-width: 767px) {
   .form__checkbox + label::before {
     width: 20px;
     height: 20px;
@@ -173,7 +170,7 @@
   cursor: pointer;
 }
 
-@media screen and (max-width: 767px) {
+@media  screen and (max-width: 767px) {
   .form__checkbox:checked + label::after {
     top: 6px;
     left: 5px;
@@ -200,9 +197,9 @@
   font-weight: 600;
   font-size: 14px;
   line-height: 21px;
-  color: #011c40;
+  color: #011C40;
 
-  background-color: #f9fbfd;
+  background-color: #F9FBFD;
   border: none;
   cursor: pointer;
 }
@@ -220,7 +217,7 @@
   min-width: 126px;
 }
 
-@media screen and (max-width: 767px) {
+@media  screen and (max-width: 767px) {
   .form__button {
     width: 100%;
     margin-top: 26px;
