--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -3,8 +3,9 @@
   padding-top: 112px;
   padding-bottom: 79px;
   padding-right: 0;
+  padding-left: 103px;
 
-  background-color: #e3ecf6;
+  background-color: #E3ECF6;
   background-image: url("../img/landscape-2-desktop@1x.jpg");
   background-repeat: no-repeat;
   background-position: 50% 50%;
@@ -15,7 +16,8 @@
   }
 }
 
-@media screen and (max-width: 1365px) {
+
+@media screen and (max-width: 1023px) {
   .features {
     background-image: url("../img/landscape-2-tablet@1x.jpg");
 
@@ -35,26 +37,48 @@
   }
 }
 
-@media screen and (min-width: 1366px) {
-  .features {
-    padding-right: 0;
-    align-items: center;
+@media  screen and (min-width: 1410px) {
+  .features  {
+    padding-right: 103px;
   }
 }
 
-@media screen and (max-width: 1365px) {
-  .features {
+@media  screen and (max-width: 1370px) {
+  .features  {
     padding-right: 0;
   }
 }
 
-@media screen and (max-width: 767px) {
+
+@media  screen and (max-width: 1365.9px) {
+  .features  {
+    padding-right: 103px;
+  }
+}
+
+
+@media  screen and (max-width: 1023px) {
+  .features {
+    padding-top: 91px;
+    padding-bottom: 70px;
+    padding-right: 15px;
+    padding-left: 45px;
+  }
+}
+
+@media  screen and (max-width: 1023px) {
+  .features {
+    padding-right: 45px;
+  }
+}
+
+@media  screen and (max-width: 768px) {
   .features {
     padding-right: 15px;
   }
 }
 
-@media screen and (max-width: 767px) {
+@media  screen and (max-width: 767px) {
   .features {
     padding-top: 58px;
     padding-bottom: 36px;
@@ -72,66 +96,69 @@
   padding-left: 466px;
 }
 
-@media screen and (min-width: 1365px) {
-  .features__heading {
+@media  screen and (min-width: 1410px) {
+  .features__heading  {
     padding-left: 0;
     text-align: center;
   }
 }
 
-@media screen and (max-width: 1365px) {
-  .features__heading {
+@media  screen and (max-width: 1370px) {
+  .features__heading  {
     padding-left: 466px;
   }
 }
 
-@media screen and (max-width: 1365px) {
-  .features__heading {
+@media  screen and (max-width: 1365.9px) {
+  .features__heading  {
     padding-left: 0;
     text-align: center;
   }
 }
 
-@media screen and (max-width: 1365px) {
+
+@media  screen and (max-width: 1023px) {
   .features__heading {
     padding-left: 233px;
   }
 }
 
-@media screen and (max-width: 1365px) {
+@media  screen and (max-width: 1023px) {
   .features__heading {
     padding-left: 0;
     text-align: center;
   }
 }
 
-@media screen and (max-width: 767px) {
+@media  screen and (max-width: 768px) {
   .features__heading {
     padding-left: 233px;
     text-align: left;
   }
 }
 
-@media screen and (max-width: 767px) {
+@media  screen and (max-width: 767px) {
   .features__heading {
     justify-content: flex-start;
     padding-left: 32px;
   }
 }
 
-@media screen and (max-width: 767px) {
+@media  screen and (max-width: 767px) {
   .features__heading {
     padding-left: 0;
     text-align: center;
   }
 }
 
-@media screen and (max-width: 767px) {
+@media  screen and (max-width: 373px) {
   .features__heading {
     align-items: flex-start;
-    text-align: center;
+    padding-left: 32px;
+    text-align: left;
   }
 }
+
 
 .features__heading h2 {
   margin: 0;
@@ -140,17 +167,17 @@
   font-weight: 600;
   font-size: 28px;
   line-height: 42px;
-  color: #011c40;
+  color: #011C40;
 }
 
-@media screen and (max-width: 1365px) {
+@media  screen and (max-width: 1023px) {
   .features__heading h2 {
     font-size: 26px;
     line-height: 39px;
   }
 }
 
-@media screen and (max-width: 767px) {
+@media  screen and (max-width: 767px) {
   .features__heading h2 {
     padding-left: 14px;
     padding-bottom: 29px;
@@ -160,74 +187,234 @@
 }
 
 .features__list {
-  @media (max-width: 1365px) {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 1fr;
-    grid-column-gap: 30px;
-  }
-
-  @media (max-width: 767px) {
-    display: flex;
-    padding: 0;
-  }
-
-  @media (min-width: 1366px) {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 1fr;
-    grid-column-gap: 40px;
-  }
+  display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
   margin: 0;
+  padding: 0;
 
   list-style: none;
 }
 
-@media screen and (min-width: 1365px) {
+@media  screen and (min-width: 1410px) {
+  .features__list  {
+    justify-content: space-between;
+  }
+}
+
+@media  screen and (max-width: 1370px) {
+  .features__list  {
+    justify-content: flex-start;
+  }
+}
+
+@media  screen and (max-width: 1365.9px) {
+  .features__list  {
+    justify-content: space-between;
+  }
+}
+
+@media  screen and (max-width: 1023px) {
   .features__list {
     justify-content: space-between;
   }
 }
 
-@media screen and (max-width: 1365px) {
+@media  screen and (max-width: 768px) {
   .features__list {
     justify-content: flex-start;
   }
 }
 
-@media screen and (max-width: 1365px) {
-  .features__list {
-    justify-content: space-between;
-  }
-}
-
-@media screen and (max-width: 1365px) {
-  .features__list {
-    justify-content: space-between;
-  }
-}
-
-@media screen and (max-width: 767px) {
-  .features__list {
-    justify-content: flex-start;
-  }
-}
-
-@media screen and (max-width: 767px) {
+@media  screen and (max-width: 767px) {
   .features__list {
     flex-direction: column;
-    align-items: center;
   }
 }
 
-@media screen and (max-width: 767px) {
+@media  screen and (max-width: 767px) {
   .features__list {
     align-items: center;
   }
 }
 
-@media screen and (max-width: 767px) {
+@media  screen and (max-width: 373px) {
   .features__list {
-    align-items: center;
+    align-items: flex-start;
   }
+}
+
+.list-features__item {
+  max-width: 360px;
+  margin-right: 40px;
+  margin-bottom: 40px;
+  padding-right: 30px;
+  padding-left: 30px;
+  padding-bottom: 23px;
+
+  background-color: #F9FBFD;
+}
+
+@media  screen and (min-width: 1410px) {
+  .list-features__item  {
+    margin-right: 0;
+  }
+}
+
+@media  screen and (max-width: 1370px) {
+  .list-features__item  {
+    margin-right: 40px;
+  }
+}
+
+@media  screen and (max-width: 1365.9px) {
+  .list-features__item  {
+    max-width: 300px;
+    margin-right: 0;
+  }
+}
+
+@media  screen and (max-width: 1156px) {
+  .list-features__item  {
+    max-width: 206px;
+    margin-right: 30px;
+    margin-bottom: 30px;
+    padding-right: 13px;
+    padding-left: 19px;
+    padding-bottom: 18px;
+  }
+}
+
+@media  screen and (max-width: 1023px) {
+  .list-features__item  {
+    margin-right: 0;
+    margin-bottom: 0;
+  }
+}
+
+@media  screen and (max-width: 768px) {
+  .list-features__item  {
+    margin-right: 30px;
+    margin-bottom: 30px;
+  }
+}
+
+@media  screen and (max-width: 767px) {
+  .list-features__item {
+    min-width: 290px;
+    margin-bottom: 30px;
+    margin-right: 0;
+    padding-right: 7px;
+  }
+}
+
+@media  screen and (max-width: 767px) {
+  .list-features__item--ship {
+    margin-right: 0;
+  }
+}
+
+@media  screen and (max-width: 767px) {
+  .list-features__item--ticks {
+    margin-left: 0;
+    margin-right: 0;
+    padding-top: 2px;
+
+    padding-right: 55px;
+  }
+}
+
+.list-features__item--ship .list-features__icon {
+  padding-top: 30px;
+  padding-bottom: 13px;
+}
+
+@media  screen and (max-width: 1023px) {
+  .list-features__item--ship .list-features__icon {
+    padding-top: 25px;
+    padding-bottom: 15px;
+  }
+}
+
+.list-features__item--ticks .list-features__icon {
+  padding-top: 35px;
+  padding-bottom: 19px;
+}
+
+@media  screen and (max-width: 1023px) {
+  .list-features__item--ticks .list-features__icon {
+    padding-top: 29px;
+  }
+}
+
+
+@media  screen and (max-width: 1023px) {
+  .list-features__item--ticks .list-features__icon {
+    padding-top: 27px;
+  }
+}
+
+.list-features__item--boat .list-features__icon {
+  padding-top: 35px;
+  padding-bottom: 23px;
+}
+
+@media  screen and (max-width: 1023px) {
+  .list-features__item--boat .list-features__icon {
+    padding-top: 28px;
+    padding-bottom: 20px;
+  }
+}
+
+@media  screen and (max-width: 1023px) {
+  .list-features__item--ship svg {
+    height: 26px;
+  }
+
+  .list-features__item--ticks svg {
+    height: 19px;
+  }
+
+  .list-features__item--boat svg {
+    height: 13px;
+  }
+}
+
+.list-features__item h3 {
+  margin: 0;
+  padding-bottom: 8px;
+
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 27px;
+  color: #011C40;
+}
+
+@media  screen and (max-width: 1241px) {
+  .list-features__item h3 {
+    padding-right: 36px;
+  }
+}
+
+
+@media  screen and (max-width: 1023px) {
+  .list-features__item h3 {
+    line-height: 25px;
+    padding-bottom: 10px;
+  }
+}
+
+@media  screen and (max-width: 767px) {
+  .list-features__item h3 {
+    padding-bottom: 9px;
+  }
+}
+
+.list-features__item p {
+  margin: 0;
+
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 20px;
+  color: #011C40;
 }
