--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -3,6 +3,7 @@
   z-index: 10;
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
   width: 100%;
   max-width: 100%;
   padding-top: 35px;
@@ -11,7 +12,7 @@
   padding-right: 71px;
 }
 
-@media screen and (max-width: 1365px) {
+@media  screen and (max-width: 1023px) {
   .page-header {
     padding-top: 30px;
     padding-bottom: 30px;
@@ -20,7 +21,7 @@
   }
 }
 
-@media screen and (max-width: 767px) {
+@media  screen and (max-width: 767px) {
   .page-header {
     flex-direction: column;
     padding-top: 20px;
@@ -29,14 +30,15 @@
   }
 }
 
-@media screen and (max-width: 1365px) {
+
+@media  screen and (max-width: 1023px) {
   .page-header__logo-image {
     width: 38px;
     height: 20px;
   }
 }
 
-@media screen and (max-width: 767px) {
+@media  screen and (max-width: 767px) {
   .page-header__logo-image {
     position: relative;
     width: 42px;
