--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -1,9 +1,11 @@
 .site-list {
   display: flex;
+  flex-wrap: wrap;
   margin: 0;
   padding: 0;
 
   list-style: none;
+
 }
 
 @media screen and (max-width: 767px) {
@@ -22,10 +24,10 @@
   padding-bottom: 8px;
 }
 
-@media screen and (max-width: 1365px) {
+@media  screen and (max-width: 1023px) {
   .site-list__item {
     padding-top: 3px;
-    padding-bottom: 0;
+    padding-bottom: 0px;
     line-height: 0;
   }
 }
@@ -36,11 +38,12 @@
   }
 }
 
+
 .site-list__link {
   margin-right: 33px;
 
   font-weight: 500;
-  color: #f9fbfd;
+  color: #F9FBFD;
   line-height: 20px;
 }
 
@@ -52,9 +55,11 @@
   opacity: 0.5;
 }
 
-@media screen and (max-width: 1365px) {
+@media screen and (max-width: 1023px) {
   .site-list__link {
-    margin-right: 11px;
+    margin-right:11px;
+    margin-left: 11px;
+    margin-right:12.5px;
     margin-left: 12.5px;
 
     font-size: 14px;
@@ -71,17 +76,17 @@
 
     font-size: 18px;
     line-height: 22px;
-    color: #011c40;
+    color: #011C40;
   }
 }
 
-@media screen and (max-width: 767px) {
+ @media screen and (max-width: 767px) {
   .site-list__item--direction {
     order: 1;
   }
 }
 
-@media screen and (max-width: 767px) {
+ @media screen and (max-width: 767px) {
   .site-list__item--advantage {
     order: 2;
   }
@@ -93,8 +98,9 @@
   }
 }
 
-@media screen and (max-width: 767px) {
+ @media screen and (max-width: 767px) {
   .site-list__item--contacts {
     order: 4;
   }
 }
+
