--- a/source/sass/normalize.scss
+++ b/source/sass/normalize.scss
@@ -10,6 +10,7 @@
 
 html {
   line-height: 1.15; /* 1 */
+  -webkit-text-size-adjust: 100%; /* 2 */
 }
 
 /* Sections
@@ -61,7 +62,7 @@ hr {
  */
 
 pre {
-  font-family: monospace; /* 1 */
+  font-family: monospace, monospace; /* 1 */
   font-size: 1em; /* 2 */
 }
 
@@ -83,6 +84,7 @@ a {
 
 abbr[title] {
   border-bottom: none; /* 1 */
+  text-decoration: underline; /* 2 */
   text-decoration: underline dotted; /* 2 */
 }
 
@@ -103,7 +105,7 @@ strong {
 code,
 kbd,
 samp {
-  font-family: monospace; /* 1 */
+  font-family: monospace, monospace; /* 1 */
   font-size: 1em; /* 2 */
 }
 
@@ -190,6 +192,13 @@ select { /* 1 */
  * Correct the inability to style clickable types in iOS and Safari.
  */
 
+button,
+[type="button"],
+[type="reset"],
+[type="submit"] {
+  -webkit-appearance: button;
+}
+
 /**
  * Remove the inner border and padding in Firefox.
  */
@@ -218,7 +227,7 @@ button:-moz-focusring,
  */
 
 fieldset {
-  padding: 0.35em 0.75em 0.63em;
+  padding: 0.35em 0.75em 0.625em;
 }
 
 /**
@@ -279,6 +288,7 @@ textarea {
  */
 
 [type="search"] {
+  -webkit-appearance: textfield; /* 1 */
   outline-offset: -2px; /* 2 */
 }
 
@@ -286,10 +296,19 @@ textarea {
  * Remove the inner padding in Chrome and Safari on macOS.
  */
 
+[type="search"]::-webkit-search-decoration {
+  -webkit-appearance: none;
+}
+
 /**
  * 1. Correct the inability to style clickable types in iOS and Safari.
  * 2. Change font properties to `inherit` in Safari.
  */
+
+::-webkit-file-upload-button {
+  -webkit-appearance: button; /* 1 */
+  font: inherit; /* 2 */
+}
 
 /* Interactive
    ========================================================================== */
