--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,12 +1,23 @@
+// Общие стили
+
 @import "normalize.scss";
 @import "fonts.scss";
 @import "visually-hidden.scss";
+@import "variables.scss";
 @import "scaffolding.scss";
+
+// Шапка
+
 @import "blocks/container.scss";
 @import "blocks/wrap.scss";
+
+
 @import "blocks/page-header.scss";
 @import "blocks/main-nav.scss";
 @import "blocks/site-list.scss";
+
+// Основное содержимое
+
 @import "blocks/page-main.scss";
 @import "blocks/about-us.scss";
 @import "blocks/description.scss";
@@ -17,8 +28,10 @@
 @import "blocks/booking.scss";
 @import "blocks/form.scss";
 @import "blocks/contacts.scss";
+
+// Подвал
+
 @import "blocks/page-footer.scss";
 @import "blocks/logo.scss";
 @import "blocks/nav.scss";
 @import "blocks/social.scss";
-@import "blocks/list-features.scss";
