--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -9,7 +9,6 @@
 }
 
 @media screen and (max-width: 767px) {
-
   .main-nav__toggle {
     position: absolute;
     top: 9.5px;
@@ -43,19 +42,18 @@
   .main-nav--closed .main-nav__toggle:hover::before {
     background-color: rgba(255, 255, 255, 0.8);
     box-shadow: 0 6px 0 0 rgba(255, 255, 255, 0.8),
-                0 12px 0 0 rgba(255, 255, 255, 0.8);
+      0 12px 0 0 rgba(255, 255, 255, 0.8);
   }
 
   .main-nav--closed .main-nav__toggle:active::before {
     background-color: rgba(255, 255, 255, 0.5);
     box-shadow: 0 6px 0 0 rgba(255, 255, 255, 0.5),
-                0 12px 0 0 rgba(255, 255, 255, 0.5);
+      0 12px 0 0 rgba(255, 255, 255, 0.5);
   }
 
   .main-nav--opened .main-nav__toggle {
     top: 9.5px;
     right: 7px;
-
 
     &::before,
     &::after {
@@ -102,12 +100,12 @@
   .main-nav--opened .main-nav__wrapper {
     position: absolute;
     top: 0;
-    right: 0;
+    right: -15px;
     width: 100%;
-    min-height: 299px;
+    min-height: 565px;
     padding-top: 73px;
     padding-left: 15px;
-    background-color: #E5E5E5;
+    background-color: #f9fbfd;
     z-index: 10;
   }
 
@@ -125,3 +123,12 @@
   }
 }
 
+.main-nav.main-nav--opened::after {
+  content: "";
+  position: fixed;
+  top:0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(0, 43, 102, 0.5);
+}
