--- a/source/sass/blocks/logo.scss
+++ b/source/sass/blocks/logo.scss
@@ -4,7 +4,7 @@
 }
 
 .page-header__logo-image {
-  fill: #F9FBFD;
+  fill: #f9fbfd;
 }
 
 @media screen and (max-width: 1023px) {
@@ -30,12 +30,11 @@
     height: 22px;
   }
 
-
   .logo-menu--closed {
-    fill: #F9FBFD;
+    fill: #f9fbfd;
   }
 
   .logo-menu--opened {
-    fill: #011C40;
+    fill: #011c40;
   }
 }
