--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -1,5 +1,5 @@
 .page-footer {
-  background-color: #011C40;
+  background-color: #011c40;
 }
 
 .page-footer__wrap {
@@ -11,7 +11,7 @@
   padding-bottom: 48px;
   padding-left: 103px;
   padding-right: 103px;
-  background-color: #011C40;
+  background-color: #011c40;
 }
 
 @media screen and (max-width: 1023px) {
@@ -23,7 +23,7 @@
   }
 }
 
-@media  screen and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .page-footer__wrap {
     align-items: start;
     flex-direction: column;
@@ -34,20 +34,19 @@
   }
 }
 
-@media  screen and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .page-footer__wrap {
     align-items: center;
     padding-left: 40px;
   }
 }
 
-@media  screen and (max-width: 400px) {
+@media screen and (max-width: 400px) {
   .page-footer__wrap {
     align-items: start;
     padding-left: 15px;
   }
 }
-
 
 .page-footer__wrapper {
   display: flex;
@@ -55,7 +54,7 @@
   align-items: center;
 }
 
-@media  screen and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .page-footer__wrapper {
     flex-direction: column;
     margin-bottom: 13px;
