--- a/source/sass/blocks/booking.scss
+++ b/source/sass/blocks/booking.scss
@@ -30,24 +30,23 @@
   }
 }
 
-@media  screen and (max-width: 1210px) {
+@media screen and (max-width: 1210px) {
   .booking {
     padding-top: 100px;
     padding-bottom: 100px;
   }
 }
 
-@media  screen and (max-width: 1023px) {
+@media screen and (max-width: 1023px) {
   .booking {
     padding-top: 90px;
     padding-bottom: 50px;
   }
 }
 
-@media  screen and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .booking {
     padding-top: 60px;
-    padding-bottom: 36px;
     padding-left: 14px;
     padding-right: 14px;
     padding-bottom: 17px;
@@ -63,7 +62,7 @@
   padding-right: 163px;
 }
 
-@media  screen and (max-width: 1210px) {
+@media screen and (max-width: 1210px) {
   .booking__wrapper {
     justify-content: center;
     flex-direction: column;
@@ -73,14 +72,14 @@
   }
 }
 
-@media  screen and (max-width: 1023px) {
+@media screen and (max-width: 1023px) {
   .booking__wrapper {
     padding-left: 0;
     padding-right: 0;
   }
 }
 
-@media  screen and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .booking__wrapper {
     padding-bottom: 48px;
   }
@@ -93,13 +92,13 @@
   padding-right: 70px;
 }
 
-@media  screen and (max-width: 1360px) {
+@media screen and (max-width: 1360px) {
   .booking__wrapper-text {
     padding-top: 100px;
   }
 }
 
-@media  screen and (max-width: 1210px) {
+@media screen and (max-width: 1210px) {
   .booking__wrapper-text {
     align-items: center;
     padding-top: 0;
@@ -107,15 +106,14 @@
   }
 }
 
-@media  screen and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .booking__wrapper-text {
     max-width: 270px;
     text-align: center;
   }
 }
 
-
-@media  screen and (max-width: 1210px) {
+@media screen and (max-width: 1210px) {
   .booking__wrapper {
     padding-top: 0;
   }
@@ -128,10 +126,10 @@
   font-weight: bold;
   font-size: 40px;
   line-height: 60px;
-  color: #011C40;
+  color: #011c40;
 }
 
-@media  screen and (max-width: 1210px) {
+@media screen and (max-width: 1210px) {
   .booking__heading h2 {
     padding-bottom: 25px;
     font-size: 34px;
@@ -139,7 +137,7 @@
   }
 }
 
-@media  screen and (max-width: 1023px) {
+@media screen and (max-width: 1023px) {
   .booking__heading h2 {
     padding-bottom: 3px;
     font-size: 34px;
@@ -147,14 +145,14 @@
   }
 }
 
-@media  screen and (max-width: 1023px) {
+@media screen and (max-width: 1023px) {
   .booking__description {
     max-width: 355px;
     text-align: center;
   }
 }
 
-@media  screen and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .booking__heading h2 {
     padding-bottom: 12px;
     font-size: 24px;
@@ -166,27 +164,26 @@
   max-width: 352px;
   margin: 0;
 
-
   font-weight: normal;
   font-size: 18px;
   line-height: 27px;
-  color: #011C40;
+  color: #011c40;
 }
 
-@media  screen and (max-width: 1210px) {
+@media screen and (max-width: 1210px) {
   .booking__description p {
     padding-bottom: 60px;
     padding-right: 0;
   }
 }
 
-@media  screen and (max-width: 1023px) {
+@media screen and (max-width: 1023px) {
   .booking__description p {
     padding-bottom: 51px;
   }
 }
 
-@media  screen and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .booking__description p {
     padding-bottom: 34px;
     font-size: 16px;
@@ -198,7 +195,7 @@
   padding-left: 60px;
 }
 
-@media  screen and (max-width: 1210px) {
+@media screen and (max-width: 1210px) {
   .booking__wrapper-form {
     padding-left: 0;
     padding-right: 0;
