--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -7,7 +7,7 @@
   background-color: #f9fbfd;
 }
 
-@media  screen and (max-width: 1023px) {
+@media screen and (max-width: 1023px) {
   .catalog {
     padding-top: 91px;
     padding-bottom: 70px;
@@ -16,13 +16,13 @@
   }
 }
 
-@media  screen and (max-width: 768px) {
+@media screen and (max-width: 768px) {
   .catalog {
-    padding-right: 0px;
+    padding-right: 0;
   }
 }
 
-@media  screen and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .catalog {
     padding-top: 59px;
     padding-bottom: 35px;
@@ -31,7 +31,7 @@
   }
 }
 
-@media  screen and (max-width: 325px) {
+@media screen and (max-width: 325px) {
   .catalog {
     padding-right: 0;
   }
@@ -43,7 +43,7 @@
   padding-bottom: 31px;
 }
 
-@media  screen and (max-width: 1023px) {
+@media screen and (max-width: 1023px) {
   .catalog__wrapper-heading {
     justify-content: flex-start;
     padding-bottom: 49px;
@@ -51,20 +51,20 @@
   }
 }
 
-@media  screen and (max-width: 768px) {
+@media screen and (max-width: 768px) {
   .catalog__wrapper-heading {
     padding-left: 183px;
   }
 }
 
-@media  screen and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .catalog__wrapper-heading {
     padding-left: 0;
     padding-bottom: 28px;
   }
 }
 
-@media  screen and (max-width: 325px) {
+@media screen and (max-width: 325px) {
   .catalog__wrapper-heading {
     padding-left: 6px;
   }
@@ -76,10 +76,10 @@
   font-weight: 600;
   font-size: 28px;
   line-height: 42px;
-  color: #011C40;
+  color: #011c40;
 }
 
-@media  screen and (max-width: 1023px) {
+@media screen and (max-width: 1023px) {
   .catalog h2 {
     margin: 0 auto;
 
@@ -88,13 +88,13 @@
   }
 }
 
-@media  screen and (max-width: 768px) {
+@media screen and (max-width: 768px) {
   .catalog h2 {
     margin: 0;
   }
 }
 
-@media  screen and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .catalog h2 {
     margin: 0 auto;
     font-size: 24px;
@@ -102,7 +102,7 @@
   }
 }
 
-@media  screen and (max-width: 325px) {
+@media screen and (max-width: 325px) {
   .catalog h2 {
     margin: 0;
   }
@@ -119,44 +119,43 @@
   list-style: none;
 }
 
-@media  screen and (max-width: 1365px) {
+@media screen and (max-width: 1365px) {
   .catalog__list {
     min-width: 100%;
   }
 }
 
-@media  screen and (max-width: 1023px) {
+@media screen and (max-width: 1023px) {
   .catalog__list {
     justify-content: space-around;
   }
 }
 
-@media  screen and (max-width: 768px) {
+@media screen and (max-width: 768px) {
   .catalog__list {
     justify-content: flex-start;
   }
 }
 
-@media  screen and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .catalog__list {
     justify-content: space-around;
   }
 }
 
-@media  screen and (max-width: 630px) {
+@media screen and (max-width: 630px) {
   .catalog__list {
     flex-direction: column;
     align-items: center;
   }
 }
 
-@media  screen and (max-width: 337px) {
+@media screen and (max-width: 337px) {
   .catalog__list {
     flex-direction: flex-start;
     align-items: flex-start;
   }
 }
-
 
 .cards__item {
   display: flex;
@@ -167,7 +166,7 @@
   margin-bottom: 15px;
 }
 
-@media  screen and (max-width: 1023px) {
+@media screen and (max-width: 1023px) {
   .cards__item {
     margin: 0;
     margin-right: 0;
@@ -175,13 +174,13 @@
   }
 }
 
-@media  screen and (max-width: 768px) {
+@media screen and (max-width: 768px) {
   .cards__item {
     margin-right: 30px;
   }
 }
 
-@media  screen and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .cards__item {
     margin-right: 0;
   }
