--- a/source/sass/blocks/description.scss
+++ b/source/sass/blocks/description.scss
@@ -8,7 +8,7 @@
   padding-left: 103px;
 }
 
-@media  screen and (max-width: 1023px) {
+@media screen and (max-width: 1023px) {
   .description__wrapper {
     padding-left: 45px;
     padding-right: 45px;
@@ -16,7 +16,7 @@
   }
 }
 
-@media  screen and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .description__wrapper {
     flex-direction: column;
     padding-left: 15px;
@@ -32,10 +32,10 @@
   font-weight: 600;
   font-size: 28px;
   line-height: 42px;
-  color: #011C40;
+  color: #011c40;
 }
 
-@media  screen and (max-width: 1023px) {
+@media screen and (max-width: 1023px) {
   .description__wrapper-text h2 {
     padding-bottom: 16px;
 
@@ -44,14 +44,13 @@
   }
 }
 
-@media  screen and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .description__wrapper-text h2 {
     padding-bottom: 14px;
     font-size: 24px;
     line-height: 34px;
   }
 }
-
 
 .description__wrapper-text p {
   max-width: 515px;
@@ -60,24 +59,24 @@
   font-weight: normal;
   font-size: 16px;
   line-height: 24px;
-  color: #011C40;
+  color: #011c40;
 }
 
-@media  screen and (max-width: 1023px) {
+@media screen and (max-width: 1023px) {
   .description__wrapper-text p {
     font-size: 16px;
     line-height: 24px;
   }
 }
 
-@media  screen and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .description__wrapper-text p {
     text-align: center;
     margin: 0 auto;
   }
 }
 
-@media  screen and (max-width: 575px) {
+@media screen and (max-width: 575px) {
   .description__wrapper-text p {
     text-align: left;
     margin: 0;
@@ -96,7 +95,7 @@
   }
 }
 
-@media  screen and (max-width: 1023px) {
+@media screen and (max-width: 1023px) {
   .description__wrapper-text {
     padding-right: 16px;
     padding-top: 90px;
@@ -104,43 +103,41 @@
   }
 }
 
-@media  screen and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .description__wrapper-text {
     padding-top: 58px;
     padding-right: 0;
   }
 }
 
-@media  screen and (max-width: 1023px) {
+@media screen and (max-width: 1023px) {
   .description__wrapper-text h2 {
     padding-right: 103px;
   }
 }
 
-@media  screen and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .description__wrapper-text h2 {
     padding-right: 0;
     text-align: center;
   }
 }
 
-@media  screen and (max-width: 355px) {
+@media screen and (max-width: 355px) {
   .description__wrapper-text h2 {
     padding-right: 70px;
     text-align: left;
   }
 }
 
-
-@media  screen and (max-width: 1023px) {
+@media screen and (max-width: 1023px) {
   .description__wrapper-img img {
     width: 324px;
     height: 264px;
   }
 }
 
-
-@media  screen and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .description__wrapper-img img {
     width: 290px;
     height: 186px;
@@ -155,7 +152,7 @@
   line-height: 0;
 }
 
-@media  screen and (max-width: 1023px) {
+@media screen and (max-width: 1023px) {
   .description__wrapper-img {
     padding-top: 100px;
     padding-bottom: 0;
@@ -163,7 +160,7 @@
   }
 }
 
-@media  screen and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .description__wrapper-img {
     display: flex;
     justify-content: center;
