--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -66,7 +66,7 @@
       width: 20px;
       height: 2px;
 
-      background-color: black;
+      background-color: #060606;
     }
 
     &::before {
@@ -126,7 +126,7 @@
 .main-nav.main-nav--opened::after {
   content: "";
   position: fixed;
-  top:0;
+  top: 0;
   bottom: 0;
   left: 0;
   right: 0;
