--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -5,7 +5,6 @@
   padding: 0;
 
   list-style: none;
-
 }
 
 @media screen and (max-width: 767px) {
@@ -24,10 +23,10 @@
   padding-bottom: 8px;
 }
 
-@media  screen and (max-width: 1023px) {
+@media screen and (max-width: 1023px) {
   .site-list__item {
     padding-top: 3px;
-    padding-bottom: 0px;
+    padding-bottom: 0;
     line-height: 0;
   }
 }
@@ -38,12 +37,11 @@
   }
 }
 
-
 .site-list__link {
   margin-right: 33px;
 
   font-weight: 500;
-  color: #F9FBFD;
+  color: #f9fbfd;
   line-height: 20px;
 }
 
@@ -57,9 +55,7 @@
 
 @media screen and (max-width: 1023px) {
   .site-list__link {
-    margin-right:11px;
-    margin-left: 11px;
-    margin-right:12.5px;
+    margin-right: 12.5px;
     margin-left: 12.5px;
 
     font-size: 14px;
@@ -76,17 +72,17 @@
 
     font-size: 18px;
     line-height: 22px;
-    color: #011C40;
+    color: #011c40;
   }
 }
 
- @media screen and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .site-list__item--direction {
     order: 1;
   }
 }
 
- @media screen and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .site-list__item--advantage {
     order: 2;
   }
@@ -98,9 +94,8 @@
   }
 }
 
- @media screen and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .site-list__item--contacts {
     order: 4;
   }
 }
-
