--- a/source/sass/scaffolding.scss
+++ b/source/sass/scaffolding.scss
@@ -8,10 +8,16 @@ html {
   box-sizing: inherit;
 }
 
+html,
 body {
+  height: 100%;
   font-style: normal;
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
   font-family: "Montserrat", "Arial", sans-serif;
+}
+
+.body--scroll {
+  overflow-y: hidden;
 }
