--- a/source/sass/blocks/card.scss
+++ b/source/sass/blocks/card.scss
@@ -141,6 +141,7 @@
   padding-bottom: 35px;
   padding-left: 25px;
   padding-right: 25px;
+  max-height: 386px;
 
   visibility: hidden;
   position: relative;
@@ -166,8 +167,13 @@
   align-self: flex-end;
 }
 
+.card:focus-within .card__side--back {
+  visibility: visible;
+}
+
 .card:hover .card__side--back {
   visibility: visible;
+  overflow: auto;
 }
 
 .card__text {
