--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -100,11 +100,11 @@
   .main-nav--opened .main-nav__wrapper {
     position: absolute;
     top: 0;
-    right: -35px;
-    width: 100%;
+    right: 0;
+    width: calc(100% - 35px);
     min-height: 100vh;
     padding-top: 73px;
-    padding-left: 15px;
+    padding-left: 25px;
     background-color: #f9fbfd;
     z-index: 10;
   }
@@ -136,4 +136,125 @@
   right: 0;
   background: rgba(0, 43, 102, 0.5);
   overflow: hidden;
+}
+
+.main-nav__wrapper {
+  max-width: 767px;
+}
+
+.main-nav__logo-menu {
+  position: absolute;
+  z-index: 12;
+  display: block;
+  width: 42px;
+  top: 20px;
+  left: 45px;
+  height: 42px;
+  cursor: pointer;
+
+  @media (min-width: 768px) {
+    display: none;
+  }
+}
+
+.main-nav--opened::before {
+  position: absolute;
+  content: url("../../img/logo-menu.svg");
+  top: 20px;
+  left: 45px;
+  z-index: 12;
+
+  @media (min-width: 768px) {
+    display: none;
+  }
+}
+
+.hamburger,
+.close {
+  border: none;
+  cursor: pointer;
+  /* position absolute position the icons relative to the body because they have no position relative parents*/
+  position: absolute;
+  top: 25px;
+  right: 8px;
+  width: 24px;
+  height: 12px;
+
+  @media (min-width: 768px) {
+    display: none;
+  }
+}
+
+.hamburger{
+  top: 15px;
+  width: 25px;
+  height: 30px;
+}
+
+.hamburger img,
+.close img {
+  width: 100%;
+  height: 100%;
+}
+
+.close img {
+  width: 13px;
+  height: 13px;
+}
+
+.navbar {
+  position: absolute;
+  /* a higher z-index put navbar above hamburger */
+  z-index: 1000;
+  top: -20px;
+  right: 0;
+  height: 150vh;
+  overflow: hidden;
+  /* basic menu styling*/
+  list-style: none;
+  background: #f9fbfd;
+  display: flex;
+  flex-direction: column;
+  padding-top: 85px;
+  /* animate slide up/down */
+  transform: translateY(-100%);
+  transition: transform 0.2s ease;
+  width: calc(100% - 35px);
+  padding: 0;
+  padding-top: 85px;
+  padding-left: 25px;
+}
+
+.navbar::after {
+  position: absolute;
+  content: url("../../img/logo-menu.svg");
+  top: 21px;
+  left: 15px;
+  z-index: 12;
+  order: 10;
+
+  @media (min-width: 768px) {
+    display: none;
+  }
+}
+
+.navbar__item {
+  padding-bottom: 18px;
+}
+
+/* :target is called when its anchor id #navbar is called by clicking on the hamburger which has href="#navbar" */
+
+.navbar:target {
+  /* show navbar */
+  transform: translateY(0);
+}
+
+li a {
+  display: block;
+  color: #011c40;
+  font-weight: 500;
+  font-size: 18px;
+  /* remove default underline and add our own with padding and border bottom */
+  text-decoration: none;
+  padding-bottom: 0.5rem;
 }
